# huns_project

./: README.md
add_service_py/: setup.py
add_service_py/add_service_py/: client.py
src/add_service_py/: package.xml
src/add_service_py/add_service_py/: server.py
src/llm_for_pick_place_voice/: package.xml  setup.cfg  setup.py
src/llm_for_pick_place_voice/llm_for_pick_place_voice/: MicController.py  get_keyword.py  get_keyword_client.py  stt.py  wakeup_word.py
src/llm_for_pick_place_voice/resource/: hey_yong_yihan.onnx  requirements.txt
src/llm_node_pkg/: package.xml  setup.cfg  setup.py
src/llm_node_pkg/llm_node_pkg/: trigger_client.py  trigger_server.py
src/llm_node_pkg/resource/: .env
src/llm_node_pkg/srv/: TriggerLLM.srv
src/text_ser_interface/srv/: TextMessage.srv
text_ser_interface/: CMakeLists.txt  package.xml
text_ser_interface/msg/: Str.msg
